SFDCProject/src/objects/Opportunity_Team__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Teams</relationshipLabel>
        <relationshipName>Opportunity_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Opportunity related to the team</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Teams</relationshipLabel>
        <relationshipName>Opportunity_Teams</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Brea PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTP Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting/Design Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner/Brea PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OT-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>